tests/rosetta/out/Haskell/bioinformatics-base-count.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:43:18: error:
    Not in scope: ‘Map.lookup’
    NB: no module named ‘Map’ is imported.
   |
43 |          in case Map.lookup k m of
   |                  ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:44:33: error:
    Not in scope: ‘Map.insert’
    NB: no module named ‘Map’ is imported.
   |
44 |               Just is -> go xs (Map.insert k (is ++ [x]) m) order
   |                                 ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:45:33: error:
    Not in scope: ‘Map.insert’
    NB: no module named ‘Map’ is imported.
   |
45 |               Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
   |                                 ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:46:27: error:
    Not in scope: ‘Map.empty’
    NB: no module named ‘Map’ is imported.
   |
46 |       (m, order) = go src Map.empty []
   |                           ^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:47:32: error:
    Not in scope: ‘Map.lookup’
    NB: no module named ‘Map’ is imported.
   |
47 |    in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]
   |                                ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:83:41: error:
    Not in scope: type constructor or class ‘Map.Map’
    NB: no module named ‘Map’ is imported.
   |
83 | _parseCSV :: String -> Bool -> Char -> [Map.Map String String]
   |                                         ^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:96:21: error:
    Not in scope: ‘Map.fromList’
    NB: no module named ‘Map’ is imported.
   |
96 |                  in Map.fromList
   |                     ^^^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:132:17: error:
    The last statement in a 'do' block must be an expression let k = le
    |
132 |                 let k = le
    |                 ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:144:17: error:
    The last statement in a 'do' block must be an expression
      let a = (a + 1)
    |
144 |                 let a = (a + 1)
    |                 ^^^^^^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:148:21: error:
    The last statement in a 'do' block must be an expression
      let c = (c + 1)
    |
148 |                     let c = (c + 1)
    |                     ^^^^^^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:152:25: error:
    The last statement in a 'do' block must be an expression
      let g = (g + 1)
    |
152 |                         let g = (g + 1)
    |                         ^^^^^^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/bioinformatics-base-count.hs:156:29: error:
    The last statement in a 'do' block must be an expression
      let t = (t + 1)
    |
156 |                             let t = (t + 1)
    |                             ^^^^^^^^^^^^^^^
